[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/SaveScreen/5 sin t√≠tulo_20220522143403.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Interfaces/PopUPS/opciones/pop_up_options_video.gd" type="Script" id=2]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=122]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=123]

[sub_resource type="Animation" id=124]
resource_name = "foc"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85.5, 31 ), Vector2( 85.5, 23 ) ]
}

[sub_resource type="Animation" id=125]
resource_name = "foc"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85.5, 31 ), Vector2( 85.5, 23 ) ]
}

[sub_resource type="Animation" id=126]
resource_name = "foc"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85.5, 31 ), Vector2( 85.5, 23 ) ]
}

[sub_resource type="Animation" id=127]
resource_name = "foc"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85.5, 31 ), Vector2( 85.5, 23 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("window:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.392293, 0.0525566 ),
"update": 0,
"values": [ Vector2( 14, 18 ), Vector2( 408, 511 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("window:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.392293, 0.0525566 ),
"update": 0,
"values": [ Vector2( 197, 246.5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../background:color")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.329877 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.509804 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("tittle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.198 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:X")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.19, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("button1:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("button2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("button3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("button4:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="pop_up_options_video" type="CanvasLayer"]
layer = 6
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="option" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -255.5
margin_right = 204.0
margin_bottom = 255.5
__meta__ = {
"_edit_lock_": true
}

[node name="window" type="TextureRect" parent="option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -9.0
margin_right = 7.0
margin_bottom = 9.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="tittle" type="Label" parent="option"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = 16.0
margin_right = 101.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 122 )
text = "Graficos y video"
align = 1
valign = 1

[node name="button1" type="Control" parent="option"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -173.5
margin_right = 168.0
margin_bottom = -122.5

[node name="tittle" type="Label" parent="option/button1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.988235, 1, 0, 1 )
custom_fonts/font = SubResource( 122 )
text = "Resolucion"
align = 1
valign = 1

[node name="Button" type="Button" parent="option/button1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -20.0
margin_right = 82.0
margin_bottom = 3.8147e-06
custom_colors/font_color_disabled = Color( 0.466667, 0.466667, 0.466667, 1 )
custom_colors/font_color_focus = Color( 0, 0.984314, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.984314, 1, 1 )
custom_fonts/font = SubResource( 122 )
custom_styles/hover = SubResource( 123 )
custom_styles/pressed = SubResource( 123 )
custom_styles/focus = SubResource( 123 )
custom_styles/disabled = SubResource( 123 )
custom_styles/normal = SubResource( 123 )
text = "1203x212"

[node name="focus" type="AnimationPlayer" parent="option/button1"]
anims/foc = SubResource( 124 )

[node name="button2" type="Control" parent="option"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -77.5
margin_right = 168.0
margin_bottom = -26.5

[node name="tittle" type="Label" parent="option/button2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.0
margin_right = 109.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.988235, 1, 0, 1 )
custom_fonts/font = SubResource( 122 )
text = "Pantalla completa"
align = 1
valign = 1

[node name="Button" type="Button" parent="option/button2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -20.0
margin_right = 82.0
custom_colors/font_color_disabled = Color( 0.466667, 0.466667, 0.466667, 1 )
custom_colors/font_color_focus = Color( 0, 0.984314, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.984314, 1, 1 )
custom_fonts/font = SubResource( 122 )
custom_styles/hover = SubResource( 123 )
custom_styles/pressed = SubResource( 123 )
custom_styles/focus = SubResource( 123 )
custom_styles/disabled = SubResource( 123 )
custom_styles/normal = SubResource( 123 )
text = "aa"

[node name="focus" type="AnimationPlayer" parent="option/button2"]
anims/foc = SubResource( 125 )

[node name="button3" type="Control" parent="option"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = 18.5
margin_right = 168.0
margin_bottom = 69.5

[node name="tittle" type="Label" parent="option/button3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.0
margin_right = 109.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.988235, 1, 0, 1 )
custom_fonts/font = SubResource( 122 )
text = "Low Detail Mode"
align = 1
valign = 1

[node name="Button" type="Button" parent="option/button3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -20.0
margin_right = 82.0
custom_colors/font_color_disabled = Color( 0.466667, 0.466667, 0.466667, 1 )
custom_colors/font_color_focus = Color( 0, 0.984314, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.984314, 1, 1 )
custom_fonts/font = SubResource( 122 )
custom_styles/hover = SubResource( 123 )
custom_styles/pressed = SubResource( 123 )
custom_styles/focus = SubResource( 123 )
custom_styles/disabled = SubResource( 123 )
custom_styles/normal = SubResource( 123 )
text = "aa"

[node name="focus" type="AnimationPlayer" parent="option/button3"]
anims/foc = SubResource( 126 )

[node name="button4" type="Control" parent="option"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = 122.5
margin_right = 168.0
margin_bottom = 173.5

[node name="tittle" type="Label" parent="option/button4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.0
margin_right = 109.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.988235, 1, 0, 1 )
custom_fonts/font = SubResource( 122 )
text = "Vsync"
align = 1
valign = 1

[node name="Button" type="Button" parent="option/button4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -20.0
margin_right = 82.0
custom_colors/font_color_disabled = Color( 0.466667, 0.466667, 0.466667, 1 )
custom_colors/font_color_focus = Color( 0, 0.984314, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.984314, 1, 1 )
custom_fonts/font = SubResource( 122 )
custom_styles/hover = SubResource( 123 )
custom_styles/pressed = SubResource( 123 )
custom_styles/focus = SubResource( 123 )
custom_styles/disabled = SubResource( 123 )
custom_styles/normal = SubResource( 123 )
text = "aa"

[node name="focus" type="AnimationPlayer" parent="option/button4"]
anims/foc = SubResource( 127 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="option"]
autoplay = "appear"
anims/appear = SubResource( 2 )

[connection signal="focus_entered" from="option/button1/Button" to="." method="_on_Button1_focus_entered"]
[connection signal="focus_exited" from="option/button1/Button" to="." method="_on_Button1_focus_exited"]
[connection signal="pressed" from="option/button1/Button" to="." method="_on_Button1_pressed"]
[connection signal="focus_entered" from="option/button2/Button" to="." method="_on_Button2_focus_entered"]
[connection signal="focus_exited" from="option/button2/Button" to="." method="_on_Button2_focus_exited"]
[connection signal="pressed" from="option/button2/Button" to="." method="_on_Button2_pressed"]
[connection signal="focus_entered" from="option/button3/Button" to="." method="_on_Button3_focus_entered"]
[connection signal="focus_exited" from="option/button3/Button" to="." method="_on_Button3_focus_exited"]
[connection signal="pressed" from="option/button3/Button" to="." method="_on_Button3_pressed"]
[connection signal="focus_entered" from="option/button4/Button" to="." method="_on_Button4_focus_entered"]
[connection signal="focus_exited" from="option/button4/Button" to="." method="_on_Button4_focus_exited"]
[connection signal="pressed" from="option/button4/Button" to="." method="_on_Button4_pressed"]
